--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
+    "svg-sprite-loader": "^6.0.6",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue-table-with-tree-grid": "^0.2.4"
@@ -27,6 +28,7 @@
     "less": "^3.12.2",
     "less-loader": "^7.0.1",
     "vue-cli-plugin-element": "^1.0.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.46.0"
   }
 }
