--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
+    "nprogress": "^0.2.0",
     "svg-sprite-loader": "^6.0.6",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vue-table-with-tree-grid": "^0.2.4"
+    "vue-table-with-tree-grid": "^0.2.4",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
