--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.1",
+    "moment": "^2.29.1",
     "nprogress": "^0.2.0",
     "svg-sprite-loader": "^6.0.6",
     "vue": "^2.6.11",
