--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "svg-sprite-loader": "^6.0.6",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-seamless-scroll": "^1.1.23",
     "vue-table-with-tree-grid": "^0.2.4",
     "vuex": "^3.6.2"
   },
