--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@jiaminghi/data-view": "^2.10.0",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "echarts": "^5.1.1",
     "element-ui": "^2.15.1",
     "moment": "^2.29.1",
     "nprogress": "^0.2.0",
