editor menu file

--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   "dependencies": {
     "@jiaminghi/data-view": "^2.10.0",
     "axios": "^0.20.0",
+    "clipboard": "^2.0.8",
     "core-js": "^3.6.5",
     "echarts": "^5.1.1",
+    "editor.md": "^1.5.0",
     "element-ui": "^2.15.1",
+    "mavon-editor": "^2.9.1",
     "moment": "^2.29.1",
     "nprogress": "^0.2.0",
     "svg-sprite-loader": "^6.0.6",
     "vue": "^2.6.11",
+    "vue-layer": "^1.2.5",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
     "vue-seamless-scroll": "^1.1.23",
     "vue-table-with-tree-grid": "^0.2.4",
