--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "echarts": "^5.1.1",
     "editor.md": "^1.5.0",
     "element-ui": "^2.15.1",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.6.0",
     "mavon-editor": "^2.9.1",
     "moment": "^2.29.1",
     "nprogress": "^0.2.0",
